--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
             }
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
         "orchestra/testbench": "^9.12"
