cambiar la estabilidad mínima de "dev" a "stable" en composer.json

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
             }
         }
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "require-dev": {
         "orchestra/testbench": "^9.12"
